--- a/Gallery.UI/Gallery.UI.csproj
+++ b/Gallery.UI/Gallery.UI.csproj
@@ -17,6 +17,9 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.6" />
     <PackageReference Include="Pharmacist.MSBuild" Version="2.0.8" PrivateAssets="all" />
     <PackageReference Include="Pharmacist.Common" Version="2.0.8" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="SerilogTraceListener" Version="3.2.0" />
     <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.354">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
