Implement deleting tags & editing tag groups
    Plus a few related changes:
    - TagGroup.Color can no longer be null
    - Dialogs can now open other dialogs
    - Adding tag groups is moved to its own dialog instead of AddTagsView

--- a/Gallery.UI/Gallery.UI.csproj
+++ b/Gallery.UI/Gallery.UI.csproj
@@ -33,6 +33,9 @@
     <Compile Update="Views\Dialogs\AddTagsView.axaml.cs">
       <DependentUpon>AddTagsView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Dialogs\EditTagGroupsView.axaml.cs">
+      <DependentUpon>EditTagGroupsView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Routable\GallerySelectionView.axaml.cs">
       <DependentUpon>GallerySelectionView.axaml</DependentUpon>
     </Compile>
